--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -1,148 +1,125 @@
-.tm-nav-item-link:hover {
-    background-color: lightskyblue;
-    color: #fff;
-}
-
-.tm-banner {
-    background: linear-gradient(90deg, lightskyblue 0%, burlywood 100%);
-}
-
-.tm-banner-inner {
-    background-color: #fff;
-}
-
-.tm-banner-text {
-    text-shadow: 5px 5px 3px #333;
-    animation-name: move-text;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-direction: normal;
-}
-
-@keyframes move-text {
-    from {
-        margin-left: 200px;
+@media screen {
+    .tm-nav-item-link:hover {
+        background-color: lightskyblue;
+        color: #fff;
     }
-}
-
-.tm-content-box.flex-2-col {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.tm-section-title {
-    text-align: center;
-}
-
-.tm-team-description-container {
-    padding: 25px;
-}
-
-.gallery-container li.box-bg:hover {
-    background-color: lightgray;
-    color: lightskyblue;
-}
-
-.heading h2 {
-    text-align: center;
-    color: lightskyblue;
-}
-
-.heading ol {
-    list-style-type: lower-latin;
-}
-
-.heading ol>li:hover:before {
-    content: '>';
-    color: black;
-    font-weight: 600;
-}
-
-.heading ol>li:nth-child(1)::after,
-.heading ol>li:nth-child(3)::after {
-    content: 'New';
-    color: red;
-    font-size: 12px;
-    font-weight: 600;
-    vertical-align: top;
-    padding-left: 2px;
-}
-
-.blocks .tm-team-description-container>p:last-child {
-    font-style: italic;
-    letter-spacing: 5px;
-    word-spacing: 10px;
-}
-
-.blocks .gallery-container p {
-    font-style: italic;
-}
-
-.blocks .gallery-container p:first-letter {
-    font-weight: bold;
-}
-
-.blocks .gallery-container .box-work {
-    padding: 8px;
-}
-
-.blocks .gallery-container .box-work:nth-child(odd) {
-    background-color: lightskyblue;
-    color: white;
-}
-
-.tm-section-description {
-    text-indent: 25px;
-    line-height: 30px;
-}
-
-.blocks .tm-section-title,
-section.tm-content-box .tm-section-title {
-    text-align: left;
-}
-
-.contact-form input {
-    border: none;
-    border-bottom: 1px solid lightskyblue;
-}
-
-.contact-form textarea {
-    border: 1px solid lightskyblue;
-    background-image: url(../img/email-icon.png);
-    background-repeat: no-repeat;
-    background-position: bottom 10px right 10px;
-    background-size: 30px;
-}
-
-.contact-form input:focus,
-.submit-btn:focus,
-.submit-btn:hover,
-.submit-btn:active {
-    background-color: lightskyblue;
-    border: none;
-}
-
-.submit-btn {
-    border: 1px solid lightskyblue;
-    background-color: white;
-    color: lightskyblue;
-    float: right;
-    padding: 10px 20px;
-}
-
-section,
-.tm-main-nav,
-#home {
-    box-shadow: 0 0 10px 0px rgba(61, 55, 61, 0.7);
-}
-
-section::before {
-    content: '';
-    display: block;
-    border: 20px solid transparent;
-    border-left: 20px solid lightskyblue;
-    border-top: 20px solid lightskyblue;
+    .tm-banner {
+        background: linear-gradient(90deg, lightskyblue 0%, burlywood 100%);
+    }
+    .tm-banner-inner {
+        background-color: #fff;
+    }
+    .tm-banner-text {
+        text-shadow: 5px 5px 3px #333;
+        animation-name: move-text;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+        animation-direction: normal;
+    }
+    @keyframes move-text {
+        from {
+            margin-left: 200px;
+        }
+    }
+    .tm-content-box.flex-2-col {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .tm-section-title {
+        text-align: center;
+    }
+    .tm-team-description-container {
+        padding: 35px;
+    }
+    .gallery-container li.box-bg:hover {
+        background-color: lightgray;
+        color: lightskyblue;
+    }
+    .heading h2 {
+        text-align: center;
+        color: lightskyblue;
+    }
+    .heading ol {
+        list-style-type: lower-latin;
+    }
+    .heading ol>li:hover:before {
+        content: '>';
+        color: black;
+        font-weight: 600;
+    }
+    .heading ol>li:nth-child(1)::after,
+    .heading ol>li:nth-child(3)::after {
+        content: 'New';
+        color: red;
+        font-size: 12px;
+        font-weight: 600;
+        vertical-align: top;
+        padding-left: 2px;
+    }
+    .blocks .tm-team-description-container>p:last-child {
+        font-style: italic;
+        letter-spacing: 5px;
+        word-spacing: 10px;
+    }
+    .blocks .gallery-container p {
+        font-style: italic;
+    }
+    .blocks .gallery-container p:first-letter {
+        font-weight: bold;
+    }
+    .blocks .gallery-container .box-work {
+        padding: 8px;
+    }
+    .blocks .gallery-container .box-work:nth-child(odd) {
+        background-color: lightskyblue;
+        color: white;
+    }
+    .tm-section-description {
+        text-indent: 25px;
+        line-height: 30px;
+    }
+    .blocks .tm-section-title,
+    section.tm-content-box .tm-section-title {
+        text-align: left;
+    }
+    .contact-form input {
+        border: none;
+        border-bottom: 1px solid lightskyblue;
+    }
+    .contact-form textarea {
+        border: 1px solid lightskyblue;
+        background-image: url(../img/email-icon.png);
+        background-repeat: no-repeat;
+        background-position: bottom 10px right 10px;
+        background-size: 30px;
+    }
+    .contact-form input:focus,
+    .submit-btn:focus,
+    .submit-btn:hover,
+    .submit-btn:active {
+        background-color: lightskyblue;
+        border: none;
+    }
+    .submit-btn {
+        border: 1px solid lightskyblue;
+        background-color: white;
+        color: lightskyblue;
+        float: right;
+        padding: 15px 25px;
+    }
+    section,
+    .tm-main-nav,
+    #home {
+        box-shadow: 0 0 10px 0px rgba(61, 55, 61, 0.7);
+    }
+    section::before {
+        content: '';
+        display: block;
+        border: 25px solid transparent;
+        border-left: 25px solid lightskyblue;
+        border-top: 25px solid lightskyblue;
+    }
 }
 
 @media print {
